--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,8 @@ services:
     name: api-gateway
     env: docker
     plan: free
-    dockerfilePath: deployment/backend/api_gateway/Dockerfile
-    buildCommand: ""
-    startCommand: ""
+    contextPath: deployment/backend/api_gateway
+    dockerfilePath: Dockerfile
     autoDeploy: true
     healthCheckPath: /
     envVars:
@@ -17,9 +16,8 @@ services:
     name: content-engine
     env: docker
     plan: free
-    dockerfilePath: deployment/backend/content_engine/Dockerfile
-    buildCommand: ""
-    startCommand: ""
+    contextPath: deployment/backend/content_engine
+    dockerfilePath: Dockerfile
     autoDeploy: true
     healthCheckPath: /
     envVars:
@@ -30,9 +28,8 @@ services:
     name: learner-data-tracker
     env: docker
     plan: free
-    dockerfilePath: deployment/backend/learner_data_tracker/Dockerfile
-    buildCommand: ""
-    startCommand: ""
+    contextPath: deployment/backend/learner_data_tracker
+    dockerfilePath: Dockerfile
     autoDeploy: true
     healthCheckPath: /
 
@@ -40,9 +37,8 @@ services:
     name: personalisation-engine
     env: docker
     plan: free
-    dockerfilePath: deployment/backend/personalisation_engine/Dockerfile
-    buildCommand: ""
-    startCommand: ""
+    contextPath: deployment/backend/personalisation_engine
+    dockerfilePath: Dockerfile
     autoDeploy: true
     healthCheckPath: /
 
@@ -50,8 +46,7 @@ services:
     name: adaptive-learning-ui
     env: docker
     plan: free
-    dockerfilePath: deployment/frontend/Dockerfile
-    buildCommand: ""
-    startCommand: ""
+    contextPath: deployment/frontend
+    dockerfilePath: Dockerfile
     autoDeploy: true
     healthCheckPath: /
