--- a/deployment/backend/learner_data_tracker/Dockerfile
+++ b/deployment/backend/learner_data_tracker/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.10-slim
 WORKDIR /app
-COPY . .
+# Copy the requirements file into the container
+COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the rest of the application code
+COPY . .
 CMD ["python", "app.py"]
