--- a/deployment/backend/api_gateway/Dockerfile
+++ b/deployment/backend/api_gateway/Dockerfile
@@ -1,11 +1,6 @@
 FROM python:3.10-slim
 WORKDIR /app
-# Copy the requirements file into the container
-COPY requirements.txt .
-
-# Install dependencies
+COPY deployment/backend/api_gateway/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the rest of the application code
-COPY . .
+COPY deployment/backend/api_gateway/ .
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
