--- a/deployment/frontend/Dockerfile
+++ b/deployment/frontend/Dockerfile
@@ -1,18 +1,7 @@
-# Use Node.js for building the React frontend
-FROM node:18-alpine AS build
+FROM node:18
 WORKDIR /app
-COPY . .
-RUN npm install && npm run build
-
-# Serve the built frontend
-FROM nginx:alpine
-# Copy the requirements file into the container
-COPY requirements.txt .
-
-# Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the rest of the application code
-COPY . .
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+COPY deployment/frontend/package*.json ./
+RUN npm install
+COPY deployment/frontend/ .
+RUN npm run build
+CMD ["npm", "run", "dev"]
