--- a/deployment/frontend/.env
+++ b/deployment/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://api-gateway-6gzt.onrender.com
+env_file_content = "VITE_API_BASE_URL=https://api-gateway-6gzt.onrender.com\n"
+
