--- a/deployment/frontend/.env
+++ b/deployment/frontend/.env
@@ -1,2 +1,2 @@
-env_file_content = "VITE_API_BASE_URL=https://api-gateway-6gzt.onrender.com\n"
+VITE_API_BASE_URL=https://api-gateway-6gzt.onrender.com
 
